--- a/Rapport1/Barathon_Rapport1.tex
+++ b/Rapport1/Barathon_Rapport1.tex
@@ -23,7 +23,9 @@ Dans ce document, nous allons aborder plusieurs aspects de notre projet appelé 
 Ce document n'est pas exhaustif mais est assez représentatif de l'idée que l'on se fait du \og{} Barathon \fg{}.
 
 \section{Description du projet}
-Blabla
+Le projet Barathon doit permettre à un utilisateur de trouver facilement des bars à proximité et de se constituer un itinéraire. L'application est pensée pour tenir compte des préférences de l'utilisateur, de sa position géographique, des bars déjà visités, de son budget et éventuellement de son moyen de transport. Elle est pensée pour être déployée en tant qu'application mobile.
+
+Après la création d'un profil de préférences, l'utilisateur pourra utiliser notre algorithme pour trouver le parcours qui correspond le mieux à ses critères.
 
 \section{Diagrammes réalisés}
 Dans cette section, nous allons aborder les deux diagrammes réalisés sur le projet.
@@ -61,7 +63,7 @@ Comme critères de qualité, nous avons choisis:
 \end{itemize}
 
 
-Comme c'est un travail qu'il faudra s'échanger, pour facilité la relève,
+Comme c'est un travail qu'il faudra s'échanger, pour faciliter la relève,
 nous voulons un programme qui est bien documenté, et qui est composé de fonctions fiables.\\
 Pour notre projet, une application de recherche dans une database, nous voulons que celle-ci s'exécute vite.
 Cette vitesse va dépendre de la requête et du hardware, mais nous voulons optimiser celle-ci le plus possible.
